fixed up navbar more, made links work in components....though it isnt smooth at the moment

--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-theme="skeleton" data-sveltekit-preload-data="hover" class="relative 
+	<body data-theme="vintage" data-sveltekit-preload-data="hover" class="relative 
 	bg-white text-slate-800 text-sm sm:text-base flex flex-col min-h-screen">
 		<div class="inset-0 opacity-5 absolute z-[-1] bgGrid"></div>
 		<div style="display: contents">%sveltekit.body%</div>
