--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-theme="vintage" data-sveltekit-preload-data="hover" class="relative 
+  <body data-theme="crimson" data-sveltekit-preload-data="hover" class="relative 
   bg-white text-slate-800 text-sm sm:text-base flex flex-col min-h-screen">
     <div class="inset-0 opacity-5 absolute z-[-1] bgGrid"></div>
     <div style="display: contents">%sveltekit.body%</div>
