Fixed theme for the most part, need to fix buttons now

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-theme="crimson" data-sveltekit-preload-data="hover" class="relative 
-  bg-white text-slate-800 text-sm sm:text-base flex flex-col min-h-screen">
-    <div class="inset-0 opacity-5 absolute z-[-1] bgGrid"></div>
+  <body data-theme="skeleton" data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
 </body>
 </html>
