--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="%sveltekit.assets%/favicon.png" alt="Favicon" />
-    
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LckpDcqAAAAAAHfvG9WgqGdqvHjNht_reTp1Me9"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -14,5 +15,5 @@
   </head>
   <body data-theme="rocket" data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
-</body>
+  </body>
 </html>
