--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Professional Web developer specializing in JavaScript, React, and Svelte.">
+    <title>Cameron Roman</title>
     <link rel="icon" href="%sveltekit.assets%/favicon.png" alt="Favicon" />
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LckpDcqAAAAAAHfvG9WgqGdqvHjNht_reTp1Me9"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
