--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Professional Web developer specializing in JavaScript, React, and Svelte.">
     <title>Cameron Roman</title>
     <link rel="icon" href="%sveltekit.assets%/favicon.png" alt="Favicon" />
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LckpDcqAAAAAAHfvG9WgqGdqvHjNht_reTp1Me9"></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
